src/objects/ApexErrorLog__c.object
<CustomObject>
    <description>Error log to catch and log script errors to assist System Administrator to identify problems in custom code</description>
    <fields>
        <fullName>Error_Code__c</fullName>
        <description>Apex error code (ENUM)</description>
        <inlineHelpText>Apex error code (ENUM)</inlineHelpText>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Process that threw the error</description>
        <inlineHelpText>Process that threw the error</inlineHelpText>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Apex Error Log</label>
    <nameField>
        <displayFormat>ApexError-{0}</displayFormat>
        <label>Apex Error Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>